Opened 5 years ago

Closed 5 years ago

Last modified 5 years ago

#16025 closed bug (fixed)

Deskbar application expander active when not shown.

Reported by: bbjimmy Owned by: jscipione
Priority: normal Milestone: R1/beta2
Component: Applications/Deskbar Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev54185

Click in the area that the application expander would show and drag downword and the application list is expanded even though the expander is not active.

click again in this area and the list is collapsed again.

Attachments (2)

Deskbar.png (35.3 KB ) - added by bbjimmy 5 years ago.
expanded list with no expander showing.
expanded_Deskbar.png (224.9 KB ) - added by bbjimmy 5 years ago.
expanded applications without the "Show application expander" selected.

Download all attachments as: .zip

Change History (9)

by bbjimmy, 5 years ago

Attachment: Deskbar.png added

expanded list with no expander showing.

comment:1 by bbjimmy, 5 years ago

Still there in hrev54195 This should be fixed before heta 2 release.

un-checking "show application expander" does not disable the function any more.

Last edited 5 years ago by bbjimmy (previous) (diff)

by bbjimmy, 5 years ago

Attachment: expanded_Deskbar.png added

expanded applications without the "Show application expander" selected.

comment:2 by bitigchi, 5 years ago

Cannot reproduce with the latest nightly. Can you delete Deskbar preferences and try again (~/config/settings/deskbar/settings)?

comment:3 by bbjimmy, 5 years ago

I deleted the settings file. then click at the right end of the field and the application expands without the expander showing.

in reply to:  1 comment:4 by pulkomandy, 5 years ago

Replying to bbjimmy:

Still there in hrev54195 This should be fixed before heta 2 release.

Please have some patience. It's been only 3 days since you reported it and I had no time to boot my Haiku machine with me. Your bugreport is not being ignored. I think I know what the problem is, I probably forgot to check if the setting was enabled in the new code to manage this. I will have a look during the weekend...

comment:6 by waddlesplash, 5 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev54203.

comment:7 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.