Check that expander is enabled before expanding items.

Fixes #16025

Change-Id: Ia69fa23ba8044c0ea14f9b669c13636e087a203d
Reviewed-on: https://review.haiku-os.org/c/haiku/+/2702
Reviewed-by: waddlesplash <waddlesplash@gmail.com>
(cherry picked from commit eb4b3f721d82cc4c056e17b0caaea4f31ea53791)
Reviewed-on: https://review.haiku-os.org/c/haiku/+/2705